--- a/Translations/German/text-relationship-change.xml
+++ b/Translations/German/text-relationship-change.xml
@@ -95,11 +95,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_SUSPICIOUS_OF</zType>
-		<Translation>Verdächtig auf</Translation>
+		<Translation>Misstrauisch auf</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_SUSPICIOUS_OF_VERB</zType>
-		<Translation>Wird verdächtig auf</Translation>
+		<Translation>Wird Misstrauisch auf</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_DISAPPOINTED_WITH</zType>
